# pyvauto

./: .gitignore  LICENSE  README.md  README.zh-TW.md  VIM_INTEGRATION.md  pyautocomplete.py  pyproject.toml  pyvauto.py
.github/workflows/: ci.yml  go.yml  release.yml
docs/superpowers/specs/: 2026-06-27-auto-delete-design.md
go/: README.md  go.mod
go/cmd/pyvauto/: main.go  main_test.go
go/internal/verilog/: autosense.go  corpus_test.go  decls.go  delete.go  delete_test.go  expand.go  expand_test.go  parser.go  parser_test.go  project.go  project_test.go  types.go
go/testdata/: gen_golden.sh
go/testdata/golden/: autoarg_basic.del.golden  autoarg_basic.golden  autoarg_nospace.golden  autoinput_ansi.del.golden  autoinput_ansi.golden  autoinput_body.del.golden  autoinput_body.golden  autoinput_const.golden  autoinst_basic.del.golden  autoinst_basic.golden  autoinst_width.golden  autologic_mixed.del.golden  autologic_mixed.golden  autooutput_ansi.del.golden  autooutput_ansi.golden  autosense_comb.del.golden  autosense_comb.golden  autowire_basic.del.golden  autowire_basic.golden  tests_repro_comment.golden  tests_test_ansi_autoinput.golden  tests_test_autologic.golden  tests_test_autosense.golden  tests_test_autowire.golden  tests_test_mixed_auto.golden  (+2 more)
plugin/: pyvauto.vim  verilog_auto.vim
tests/: repro_comment.sv  test_ansi_autoarg.sv  test_auto.sv  test_autologic.sv  test_autosense.sv  test_autowire.sv  test_cli.py  test_core.py  test_fixtures.py  test_mixed_auto.sv  test_plugin.py  test_resolve.py  test_standalone.py  test_sub.sv  test_top.sv
(+7 files in other folders)
